--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,5 @@ board = esp32-s2-saola-1
 framework = arduino
 lib_deps = adafruit/Adafruit NeoPixel @ ^1.11.0
     https://github.com/andriii-droid/Button.git
+
+monitor_speed = 115200
